--- a/index.html
+++ b/index.html
@@ -1,5 +1,27 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
-<title>Redirecting to https://shoppy.gg/product/BLi3Dea/</title>
-<meta http-equiv="refresh" content="0; URL=https://shoppy.gg/product/BLi3Dea">
-<link rel="canonical" href="https://shoppy.gg/product/BLi3Dea">
+<html>
+
+<head>
+    <meta charset="utf-8">
+    <title>Error 404 :(</title>
+
+    <script>
+        window.onload = function () {
+            const destination = window.location.href;
+            if (window.location.href.includes("nvuillam.github.io/mega-linter")) {
+                const redirectLocation = window.location.href.replace(
+                    "nvuillam.github.io/mega-linter",
+                    "megalinter.github.io"
+                );
+                document.getElementById("body").innerHTML = "Mega-Linter has moved into an organization repository for its V5 !<br/><br/>Redirecting to " + redirectLocation + " ...";
+                window.location.href = redirectLocation;
+            }
+        }
+    </script>
+</head>
+
+<body id="body" style="text-align: center">
+    Page not found
+</body>
+
+</html>
