--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>Redirecting to https://shoppy.gg/product/A2TKCpZ/</title>
-<meta http-equiv="refresh" content="0; URL=https://shoppy.gg/product/A2TKCpZ/">
-<link rel="canonical" href="https://shoppy.gg/product/A2TKCpZ/">
+<meta http-equiv="refresh" content="0; URL=https://shoppy.gg/product/A2TKCpZ">
+<link rel="canonical" href="https://shoppy.gg/product/A2TKCpZ">
